# Minimax-Mancala

./: README.md  mancala.cabal  mancala.eventlog  minimax.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/506d011b/: cabal_macros.h
.stack-work/ghci/8caf6d42/: cabal_macros.h
.stack-work/ghci/f22afcb0/: cabal_macros.h
.stack-work/install/x86_64-osx/e728fbc0444a73dd247644d86590f18168acbd281173e2bb27d1159106974116/9.2.5/lib/x86_64-osx-ghc-9.2.5/mancala-0.1.0.0-KYVjh9IuNAd7QuN1eDeYqi/: Mancala.hi  Minimax.dyn_hi  Minimax.hi
.stack-work/install/x86_64-osx/e728fbc0444a73dd247644d86590f18168acbd281173e2bb27d1159106974116/9.2.5/pkgdb/: mancala-0.1.0.0-KYVjh9IuNAd7QuN1eDeYqi.conf  package.cache
app/: Play.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: mancala-0.1.0.0-inplace.conf  minimax-0.1.0.0-inplace.conf  package.cache
src/: Mancala.hi  Mancala.hs  Minimax  Minimax.eventlog  Minimax.hi  Minimax.hs
