name:                minimax
version:             0.1.0.0
author:              Chance Onyiorah
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , array
                     , vector
  default-language:    Haskell2010
  exposed-modules:
      Minimax
      Mancala

executable mancala
  hs-source-dirs:      app
  main-is:             Play.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base
                     , minimax
                     , vector
  default-language:    Haskell2010
